# RalphOS

./: .env  .env.example  .gitignore  .gitmodules  .mcp.json  .ralph_current_prompt.md  CLAUDE.md  README.md  Ralph Dashboard.command  WARP.md  create_manifest.py  dashboard.html  extract_gateway_builds.py  extract_onallcylinders_builds.py  extract_tacoma_world_builds.py  extract_urls_from_mcp.py  process_tacoma_world_urls.py  pyproject.toml  ralph_os.py  ralph_run.jsonl  requirements.txt  scrape_custom_wheel_offset_urls.py  scrape_html.py  scrape_tacoma_world_mcp.py  scrape_urls.py  tacoma_world_final_extraction.py
.cursor/plans/: sub-ralph_pipeline_architecture_a49e6efc.plan.md
.docs/: MOTORMIA_Builds_Sources.md  automobile_forums_table.html  motorcycle_forums_table.html
.examples/earnings_analysis/: prompt.md
docs/: DIRECTORY_STRUCTURE.md  REPO_MAP.md
examples/earnings_analysis/: prd.json  (+2 more)
fylo-core-mcp/: README.md  package.json  setup.sh
input/: amc_ebay.csv  audiocityusa.csv  autotempest.csv  carandclassic.csv  goo-net-exchange.csv  hamann-motorsport.csv  hennesseyperformance.csv  manhart-automotive.csv  paramount-performance.csv  pistonheads-auctions.csv  rebornbuilds_85_builds.csv  roushperformance.csv  tunedbyanton.csv  twostepperformance.csv
schema/: Vehicle_Componets.json  build_extraction_schema.json
scraped_builds/: manifest.json  scrape_progress.json  urls.json
scripts/: RalphOS.md  create_manifest.py  queue-progress.txt
tests/: run_tests.sh  test_checkpoint_manager.py  test_integration.py  test_parallel_processor.py  test_source_discovery.py
(+2328 files in other folders)
