[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motormia-ralph"
version = "0.1.0"
description = "Ralph autonomous scraping agent for Motormia ETL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Motormia Team" }
]
dependencies = [
    # Core scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Stealth scraping with Camoufox
    "camoufox[geoip]>=0.4.0",
    "playwright>=1.40.0",
    # Data handling
    "orjson>=3.9.0",
    "tqdm>=4.66.0",
    "duckdb>=1.0.0",
    # Environment
    "python-dotenv>=1.0.0",
    # Selenium (legacy scrapers)
    "selenium>=4.15.0",
    # Claude Agent SDK for subagents
    "claude-agent-sdk>=0.1.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ralph",
    "schema",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
